SERVER-40954 Add recommendation to downgrade binary version on unrecoverable rollbacks